--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ a {
   --back-color:rgb(3, 3, 44) ;
   --font-color: white;
   --white-color: white;
-  --style-color: green;
+  --style-color: rgb(4, 212, 4);
   --fill-color:rgb(7, 7, 136);
 }
 
