--- a/style.scss
+++ b/style.scss
@@ -162,13 +162,14 @@ main{
         h3{
             margin-top: 1.5em;
             margin-bottom: .5em;
+            letter-spacing: .2em;
         }
 
         h1{
             color: var(--style-color);
             margin-bottom: 1em;
         }
-
+       
         p{
             font-size: .9em;
         }
