--- a/style.css
+++ b/style.css
@@ -85,6 +85,7 @@ header {
 
 header .logo {
   font-weight: 700;
+  z-index: 1000;
 }
 
 header .logo span {
@@ -94,7 +95,7 @@ header .logo span {
 header nav {
   position: absolute;
   right: -100%;
-  top: 4.9em;
+  top: 0em;
   width: 100%;
   height: calc(100vh - 5em);
   display: -webkit-box;
@@ -108,14 +109,15 @@ header nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: space-evenly;
-      -ms-flex-pack: space-evenly;
-          justify-content: space-evenly;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
   overflow: hidden;
   z-index: 100;
   -webkit-transition: ease-in-out .5s all;
   transition: ease-in-out .5s all;
   font-size: .8em;
+  z-index: 999;
 }
 
 .show {
@@ -126,6 +128,7 @@ header nav {
   padding: 0.5em;
   position: relative;
   cursor: pointer;
+  z-index: 1000;
 }
 
 main {
