--- a/style.scss
+++ b/style.scss
@@ -75,6 +75,7 @@ header{
     
     .logo{
         font-weight: 700;
+        z-index: 1000;
         span{
             color:var(--fill-color);
         }
@@ -83,19 +84,19 @@ header{
     nav{
         position: absolute;
         right: -100%;
-        top: 4.9em;
+        top: 0em;
         width: 100%;
         height: calc(100vh - 5em);
         display: flex;
         flex-direction: column;
         background-color:var(--white-color) ;
         align-items: center;
-        justify-content: space-evenly;
+        justify-content: flex-start;
         overflow: hidden;
         z-index: 100;
         transition: ease-in-out .5s all;
         font-size: .8em;
-        
+       z-index: 999;
 
      
     }
@@ -112,6 +113,7 @@ header{
    padding: 0.5em;
     position: relative;
     cursor: pointer;
+    z-index: 1000;
 }
 
 main{
