--- a/style.scss
+++ b/style.scss
@@ -2,10 +2,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;500;700&display=swap');
 :root{
     --white-color:white ;
-    --back-color: rgb(172, 172, 172);
     --font-color:#000;
-    --fill-color: rgb(255, 0, 0);
-    --style-color: rgb(7, 7, 136);
+    --style-color: rgb(3, 3, 218);
 }
 
 
@@ -32,26 +30,24 @@ a{
 
 
 .dark{
-    --back-color:rgb(3, 3, 44) ;
-    --font-color: white;
-    --white-color: white;
-    --style-color: rgb(4, 212, 4);
-    --fill-color:rgb(7, 7, 136);
+    --font-color:white ;
+    --white-color:rgb(43, 43, 43);
+    --style-color: rgb(244, 97, 0);
 }
 
 body{
     min-width: 280px;
     width: 100%;
-    max-width: 2400px;
     font-size: 14px;
     font-family: 'Poppins', sans-serif;
+    background-color: var(--white-color);
+    color: var(--font-color);
     margin: 0 auto;
 }
-.wrapper{
-    overflow: hidden;
-    transition: .5s all ease-in-out;
-    background-color: var(--back-color);
-    color: var(--font-color);
+.container{
+   max-width: 1240px;
+   min-width: 350px;
+   padding: 0 20px;
 }
 
 header{
@@ -64,7 +60,7 @@ header{
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 0.5em 1em; 
+    padding: 0.5em 30px; 
     font-size: 1.3em;
     font-weight: 700;
     background-color:var(--white-color) ;
@@ -73,45 +69,88 @@ header{
     box-sizing: border-box;
     box-shadow: 0 1px 1px rgba(0,0,0,0.11);
     
-    .logo{
-        font-weight: 700;
-        z-index: 1000;
-        span{
-            color:var(--fill-color);
-        }
-    }
+   
 
     nav{
         position: absolute;
         right: -100%;
         top: 1em;
         width: 100%;
-        height: calc(80vh);
+        height: calc(100vh);
         display: flex;
         flex-direction: column;
-        background-color:var(--white-color) ;
-        align-items: center;
-        justify-content: center;
-        overflow: hidden;
-        transition: ease-in-out .5s all;
+        background-color: var(--white-color) ;
+        align-items: flex-start;
+        margin-top: 8rem;
+        justify-content: flex-start;
         font-size: .7em;
-       z-index: 999;
+        z-index: 999;
+        transition: right linear 0.5s;
+        padding: 0 40px;
 
-     
+        li{
+        transition: 0.5 ease border-left;
+        margin-bottom: 30px;
+        font-size: 1.1rem;
+        opacity: .7;
+        padding-left: 20px;
+       }
+
+       li:hover{
+        opacity: 1;
+        transition: 0.5 ease opacity;
+       }
+   
+
+     .active{
+        border-left: var(--style-color) solid 2px;
+        opacity: 1;
+        transition: 0.5 ease opacity;
+       }
+   
+
+        a{
+            font-size: 1em;
+            color: var(--style-color);
+         }      
+        
     }
 
     
 }
 
+
+header .logo {
+    font-weight: 700;
+    z-index: 1000;
+    display: flex;
+    align-items: center;
+
+
+    img{
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-right: 10px;
+    }
+
+  }
+   
 .show{
-    right: 0;
+    right: 0;  
     
 }
 
-.toggle{
-   padding: 0.5em;
+.toggle, .cart{
+    font-size: 1.5rem;
     position: relative;
     cursor: pointer;
+   margin-left: 5px;
+}
+
+.headerIcons{
+    display: flex;
+    align-items: center;
     z-index: 1000;
 }
 
@@ -126,7 +165,6 @@ main{
     position: relative;
     box-sizing: border-box;
     overflow: hidden;
-    margin-top: 6em;
     z-index: 1;
 }
 
@@ -138,18 +176,18 @@ main{
     width: 100%;
     justify-content: center;
     align-items: center;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.11);
     
 
     .home__image{
-        min-width: 50%;
-        height: 200px;
-        border-radius: 30px;
-        box-shadow: 5px 2px 2px rgba(0,0,0,0.3),
-        2px -2px -2px rgba(0,0,0,0.3);
+        width: 300px;
+        height: 300px;
+        border-radius: 50%;
+        overflow: hidden;
+        margin-top: 7rem;
 
         img{
             object-fit: cover;
+            object-position: left;
             width: 100%;
             height: 100%;
             border-radius: 30px;
@@ -159,36 +197,37 @@ main{
     .text{
         line-height: 1.5em;
         font-size: 1.3em;
-
-        h3{
-            margin-top: 1.5em;
-            margin-bottom: .5em;
-            letter-spacing: .2em;
-        }
+        align-items: center;
 
         h1{
             color: var(--style-color);
-            margin-bottom: 1em;
+            margin-bottom: 10px;
+            margin-top: 1.5em;
         }
        
         p{
             font-size: .9em;
+            margin: 5px 0;
         }
 
         button{
-            padding: 0.5em 0.8em;
+            padding: 1em 0.8em;
             outline: none;
-            border: var(--style-color) solid 2px;
-            color: var(--style-color);
+            color: var(--white-color);
             margin-top: .5em;
             border-radius: 5px;
-            transition: background-color .5s linear;
+            background-color: var(--style-color);
+            border: none;
+            width: 100%;
+            font-size: .9rem;
+            font-weight: 500;
+            letter-spacing: 3px;
+            
         }
 
         button:hover{
-            background-color: var(--style-color);
-            color: var(--white-color);
-          
+            opacity: .7;
+            transition: opacity .5s linear;
         }
     }
     
@@ -196,38 +235,9 @@ main{
 
 }
 
-header nav{
-    height: 100vh;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    
-
-    li{
-        transition: 0.5 ease all;
-        padding: 0.6em 1em;
-        border-radius: 10px;
-      
-    }
-
-     .active, li:hover{
-        border: var(--style-color) solid 2px;
-      
-    }
-
-   a{
-        font-size: 1em;
-        color: var(--style-color);
-        
-    }
-}  
 
 #about{
-    box-shadow: 0 1px 1px rgba(0,0,0,0.11);
     width: 100%;
-    min-height: 60vh;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -237,7 +247,9 @@ header nav{
     }
     p{
         font-size: 1.2em;
-        margin-bottom: 1em;
+        text-align: justify;
+        margin: 1.5rem 0;
+      
     }
 
     .body{
@@ -249,10 +261,9 @@ header nav{
 
       .about__image{
           position: relative;
-          height: 8em;
-          width: 10em;
+          height: 10em;
+          width: 12em;
          transform-style: preserve-3d;
-
          animation: animate 15s linear infinite;
 
 
@@ -301,8 +312,6 @@ header nav{
 }
 
 #menu{
-    box-shadow: 0 1px 1px rgba(0,0,0,0.3),
-                2px -1px -1px rgba(0,0,0,0.3);
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -314,23 +323,24 @@ header nav{
 
     .image-grid{
         display: grid;
-        width: 95%;
+        width: 100%;
         grid-template-columns: minmax(200px, 100%);
         justify-items: center;
-
+        gap: 20px;
     }
 
     .menu-image{
         display: flex;
         flex-direction: column;
+        align-items: center;
         width: 100%;
-        border: 3px solid var(--white-color);
-        margin-bottom: 1em;
+        border: 1px solid rgb(230, 228, 228);
+        height: 350px;
         overflow: hidden;
 
         .c-image{
-            min-height: 13em;
             position: relative;
+            height: 80%;
             width: 100%;
             overflow: hidden;
         }
@@ -344,22 +354,21 @@ header nav{
 
         h5{
             margin-bottom: 1em;
-            font-size: 1em;
+            font-size: 1.3em;
+            display: flex;
+            width: 100%;
+            padding: 0 20px;
+            justify-content: space-between;
+            align-items: center;
 
-            span{
-                color: var(--style-color);
-                border: var(--style-color) 2px solid;
-                margin-left: 1em;
-                padding: 0.1em .6em;
-                background-color: var(--white-color);
-                cursor: pointer;
-                transition: .5s linear all;
-            }
+           .add-icon{
+               font-size: 18px;
+               font-weight: 900;
+           }
 
-            span:hover{
-                color: var(--font-color);
-                background-color: var(--style-color);
-            }
+           .add-icon:hover{
+            opacity: .7;
+        }
         }
 
         img{
@@ -369,7 +378,6 @@ header nav{
             transition: all .5s linear;
             height: 100%;
             width: 100%;
-            opacity: 0.7;
         }
 
         img:hover{
@@ -379,9 +387,16 @@ header nav{
     }
 }
 
-#reservation{
-   
-    width: 95%;
+.cartDetail{
+    position: absolute;
+    background-color: var(--white-color);
+    min-height: 100vh;
+    top: 6rem;
+    width: 100%;
+    right: -100%;
+    padding: 0 30px;
+    transition: right .5s linear;
+
     h1{
         padding: 1em 0 .5em;
     }
@@ -400,12 +415,14 @@ header nav{
 
 .shopping-main{
     margin-bottom: 2.2em;
+    align-items: center;
 }
 
     .shopping-header{
         display: flex;
         justify-content: space-between;
         margin-bottom: 1em;
+        font-size: .9rem;
     }
 
    
@@ -418,16 +435,14 @@ header nav{
         display: none;
     }
     button{
-        font-size: 1.1em;
-        padding: 0.2em 0.3em;
-        color: var(--style-color);
-        border: var(--style-color) 2px solid;
-        outline: none;
-        border-radius: 2px;
+        font-size: 1.5em !important;
+        background: transparent;
+        border: none;
+      
     }
     button:hover{
-        color: var(--font-color);
-        background-color: var(--style-color);
+        opacity: .7;
+        transition: opacity 0.5s ease;
     }
     .shopping-item{
         display: flex;
@@ -440,10 +455,14 @@ header nav{
         display:flex;
         flex-direction: column;
         align-items: flex-start;
+        text-align: center;
     }
+    
     .img-shopping{
         height: 6em;
-        width: 5em;
+        width: 6em;
+        border-radius: 50%;
+        overflow: hidden;
         margin-bottom: 1em;
     }
 
@@ -465,7 +484,7 @@ header nav{
     }
 
     .summation{
-        border-top: var(--style-color) 2px solid;
+        border-top: 1px solid rgb(230, 228, 228);
         margin-top: 3em;
         width: 100%;
 
@@ -473,15 +492,18 @@ header nav{
             padding: 1em 0;
             display: flex;
             justify-content: space-between;
-            font-size: 1.5em;
+            font-size: 1.6em;
         }
     }
 }
 
+.showCart{
+    right: 0;
+}
+
 #contact{
-    font-size: 14px;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.11);
-    width: 95%;
+    font-size: 16px;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -492,8 +514,7 @@ header nav{
     }
 
     .info-wrap{
-          border: var(--white-color) solid 2px;
-          color: var(--style-color);
+         
           border-radius: 5px;
           width: 100%;
           display: flex;
@@ -501,11 +522,6 @@ header nav{
           
           align-items: center;
           margin-top: 1em;
-          box-shadow: 0 1px 1px rgba(0,0,0,0.25), 
-                       0 2px 2px rgba(0,0,0,0.20), 
-                       0 4px 4px rgba(0,0,0,0.15), 
-                       0 8px 8px rgba(0,0,0,0.10),
-                       0 16px 16px rgba(0,0,0,0.05);
           
 
           span{
@@ -544,16 +560,80 @@ header nav{
           }
 
       }
+
+    
    
+}  
+.contactForm{
+    width: 100%;
+    padding: 0 10px;
 }
+
+form{
+          display: flex;
+          flex-direction: column;
+          width: 100%;
+          font-size: 18px;
+
+
+          > div{
+          text-align:left;
+          width: 100%;
+          margin: 10px 0;
+
+          input{
+              padding: 10px 0;
+              margin-top: 10px;
+              border: none;
+              border-bottom: rgb(233, 233, 233) 1px solid; 
+              width: 100%;
+              outline: none;
+          }
+
+          textarea{
+            margin-top: 10px;
+            border: none;
+            border-bottom: rgb(233, 233, 233) 1px solid; 
+            width: 100%;
+            outline: none;
+          }
+
+ 
+      }
+
+      button{
+        padding: 1em 0.8em;
+        outline: none;
+        color: var(--white-color);
+        margin-top: .5em;
+        border-radius: 5px;
+        background-color: var(--style-color);
+        border: none;
+        width: 100%;
+        font-size: .9rem;
+        font-weight: 500;
+        letter-spacing: 3px;
+        
+    }
+
+    button:hover{
+        opacity: .7;
+        transition: opacity .5s linear;
+    }
+      }
+
+
+
+
+     
+
 footer{
-    font-size: 1.3em;
-    box-shadow: 0 1px 1px rgba(0,0,0,0.11);
+    font-size: 1.4em;
+   border-top:  rgb(233, 233, 233) 1px solid;
     margin-top: 1em;
     width: 100%;
     padding: 1em 2em;
     text-align: center;
-    background-color: var(--back-color);
     position: relative;
 
     .scroll-up{
@@ -570,12 +650,16 @@ footer{
         left: 0;
         color: var(--style-color);
         padding: 0.2em 0.5em;
-        font-size: 1.3em;
+        font-size: 2em;
     }
 
     img{
         margin-top: 1em;
         width: 60%;
+    }
+
+    span{
+        color: var(--style-color);
     }
 }
 
