--- a/style.scss
+++ b/style.scss
@@ -3,7 +3,7 @@
 :root{
     --white-color:white ;
     --font-color:#000;
-    --style-color: rgb(3, 3, 218);
+    --style-color: rgb(244, 97, 0);
 }
 
 
@@ -64,7 +64,6 @@ header{
     font-size: 1.3em;
     font-weight: 700;
     background-color:var(--white-color) ;
-    color: var(--style-color);
     z-index: 100;
     box-sizing: border-box;
     box-shadow: 0 1px 1px rgba(0,0,0,0.11);
@@ -81,7 +80,7 @@ header{
         flex-direction: column;
         background-color: var(--white-color) ;
         align-items: flex-start;
-        margin-top: 8rem;
+        margin-top: 6rem;
         justify-content: flex-start;
         font-size: .7em;
         z-index: 999;
@@ -91,7 +90,7 @@ header{
         li{
         transition: 0.5 ease border-left;
         margin-bottom: 30px;
-        font-size: 1.1rem;
+        font-size: 1rem;
         opacity: .7;
         padding-left: 20px;
        }
@@ -111,7 +110,7 @@ header{
 
         a{
             font-size: 1em;
-            color: var(--style-color);
+            color: inherit;
          }      
         
     }
@@ -145,7 +144,7 @@ header .logo {
     font-size: 1.5rem;
     position: relative;
     cursor: pointer;
-   margin-left: 5px;
+   margin-left: 10px;
 }
 
 .headerIcons{
@@ -200,7 +199,7 @@ main{
         align-items: center;
 
         h1{
-            color: var(--style-color);
+            
             margin-bottom: 10px;
             margin-top: 1.5em;
         }
@@ -390,12 +389,14 @@ main{
 .cartDetail{
     position: absolute;
     background-color: var(--white-color);
+    color: var(--font-color);
     min-height: 100vh;
     top: 6rem;
     width: 100%;
     right: -100%;
     padding: 0 30px;
     transition: right .5s linear;
+    z-index: 800;
 
     h1{
         padding: 1em 0 .5em;
@@ -628,7 +629,7 @@ form{
      
 
 footer{
-    font-size: 1.4em;
+    font-size: 1.1em;
    border-top:  rgb(233, 233, 233) 1px solid;
     margin-top: 1em;
     width: 100%;
@@ -643,12 +644,13 @@ footer{
         color: var(--style-color);
         padding: 0.2em 0.5em;
         font-size: 1.3em;
+        display: none;
     }
     .change-theme{
         position: absolute;
+       
         bottom: 0;
         left: 0;
-        color: var(--style-color);
         padding: 0.2em 0.5em;
         font-size: 2em;
     }
@@ -821,7 +823,7 @@ footer{
         }
 
         a{
-            color: var(--style-color);
+            
             font-size: 1em;
             font-weight: 700;
             letter-spacing: .2em;
